minor bug fixes, comments

--- a/index.html
+++ b/index.html
@@ -14,33 +14,41 @@
         Black Jack
     </div>
 
+    <div class="button" id="newgame">
+        Új játék
+    </div>
+
     <table class="columndivider">
         <tr>
             <td>
-                <div class="container" id="player">
-                    <div class="name">
+                <div class="container">
+                    <div class="name" id="player">
                         Játékos
                     </div>
 
-
-                    <!-- TODO: kontent az oldalba -->
+                    <div class="imagecontainer"  id="playercontainer"></div>
                 </div>
             </td>
 
             <td>
-                <div class="container" id="house">
-                    <div class="name">
+                <div class="container">
+                    <div class="name" id="house">
                         Ház
                     </div>
 
-
-                    <!-- TODO: kontent az oldalba -->
+                    <div class="imagecontainer"  id="dealercontainer"></div>
                 </div>
             </td>
         </tr>
     </table>
 
+    <div class="button" id="pull">
+        Lapot húz
+    </div>
 
+    <div class="button" id="hold">
+        Tart
+    </div>
 
     <script type="module" src="./script.js"></script>
 </body>
